# home-hub

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  com.bonifacic.homehub.plist  deploy.sh  pyproject.toml  requirements.txt  setup_sheets.py
.claude/: launch.json
alembic/: env.py
alembic/versions/: 89d043d45015_change_outdoor_time_columns_to_string.py  c4682bc66f0e_initial_schema.py
app/: __init__.py  auth.py  caldav_helper.py  cards.py  chat.py  chores.py  dashboard.py  health.py  meal_prep.py  meals.py  reminders.py  schedule.py  sheets.py  shopping.py
backend/: config.py  database.py  deps.py  main.py
backend/models/: __init__.py  calendar.py  chore.py  grocery.py  home.py  meal.py  outdoor.py  pantry.py  user.py
backend/routers/: auth.py  calendar.py  chat.py  chores.py  dashboard.py  grocery.py  health.py  home.py  meals.py  outdoor.py  pantry.py  recipes.py
backend/schemas/: auth.py  calendar.py  chat.py  chore.py  dashboard.py  grocery.py  home.py  meal.py  outdoor.py  pantry.py
backend/services/: calendar_service.py  chat_service.py  chore_service.py  grocery_service.py  home_service.py  meal_service.py  outdoor_service.py  pantry_service.py  recipe_service.py  weather_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  store.ts  types.ts
scripts/: migrate_outdoor.py  seed_users.py
templates/: base.html  cards.html  chores.html  dashboard.html  health.html  login.html  meal_prep.html  meals.html  recipe.html  reminders.html  schedule.html  shopping.html
(+22 files in other folders)
